# cc-plugins

./: .gitignore  CLAUDE.md  README.md
math-paper-creator/: CHANGELOG.md  README.md  pyproject.toml
math-paper-creator/.claude-plugin/: plugin.json
math-paper-creator/commands/: author.md  onboard.md  paper.md  plain-english.md  report.md  review.md  status.md
math-paper-creator/hooks/: hooks.json
math-paper-creator/src/meta_compiler/: __init__.py  checks.py  cli.py  registry.py  symbols.py  units.py  verification.py
math-paper-creator/templates/: _checklist.md  actuarial.md  decision-analysis.md  econometric.md  financial-pricing.md  game-theoretic.md  graph-network.md  optimization.md  queueing.md  simulation.md  statistical.md
math-paper-creator/tests/: test_axioms.py  test_end_to_end.py  test_errors.py  test_integrity.py  test_parameters.py  test_reconciliation.py  test_scalar_access_logging.py  test_scalar_refs.py  test_scalar_strict_mode.py  test_scalar_unwrap.py  test_sets.py  test_templates.py  test_unit_boundaries.py  test_variables.py  test_verification.py
meta-compiler/: README.md  pyproject.toml
meta-compiler/.claude-plugin/: plugin.json
meta-compiler/commands/: author.md  check.md  compile.md  onboard.md  paper.md  report.md  status.md
meta-compiler/hooks/: hooks.json
meta-compiler/scripts/: validate-math-md.sh  validate-model-md.sh
meta-compiler/tests/: conftest.py  test_constraints.py  test_errors.py  test_expr.py  test_expressions.py  test_integrity.py  test_objectives.py  test_parameters.py  test_sets.py  test_units.py
(+391 files in other folders)
