[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-compiler"
version = "0.1.0"
description = "Symbol registry and validation engine for mathematical models"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
verification = ["z3-solver>=4.12"]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_compiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
