[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "meta-compiler"
version = "0.1.0"
description = "Symbol registry and validation engine for mathematical models"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_compiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
